openmediavault-clamav (0.3.0.2) stable; urgency=low

  * Display more informations about scheduled scan jobs in grid.
  * Mantis 0000488: Display icon in "Enabled" columns.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 29 May 2012 19:22:44 +0200

openmediavault-clamav (0.3.0.1) stable; urgency=low

  * Update locales.
  * Send a warning email if a virus has been detected.
  * Add option to remove infected files to scan job configuration.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 26 May 2012 02:42:34 +0200

openmediavault-clamav (0.3) stable; urgency=low

  * Initial release

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 18 May 2012 18:04:53 +0200