@@ -1,6 +1,8 @@
 openmediavault-clamav (0.3.0.2) stable; urgency=low
 
+  * Update locales.
   * Display more informations about scheduled scan jobs in grid.
+  * Add 'verbose' and 'multiscan' options to scan jobs.
   * Mantis 0000488: Display icon in "Enabled" columns.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 29 May 2012 19:22:44 +0200
